# sem4utils

sem4utils/: LICENSE  README.md  pyproject.toml
sem4utils/sem4utils/: __init__.py  classwork.py  long_questions.py  previous_year.py
sem4utils/sem4utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
